# PoolNet

./: .gitignore  pyproject.toml  run.py  solver.py
networks/: joint_poolnet.py
