[tool.poetry]
name = "poolnet"
version = "0.1.0"
description = "Real-Time Salient Object Detection"
authors = ["reeve0930 <reeve0930@gmail.com>"]
license = "MIT"
keywords = ["saliency", "poolnet"] 
readme = "README.md"
repository = "https://github.com/reeve0930/PoolNet"

[tool.poetry.dependencies]
python = "^3.7"
pillow = "^7.1.2"
opencv-python = "^4.2.0"
torch = "^1.5.1"
torchvision = "^0.6.1"
scipy = "^1.4.1"
reelib = "^1.3.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
